--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: wheat;
   background-size: cover;
   color: black;
   font-family: monospace;
